// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PhotoBoothControls Component > Snapshots > should match snapshot for guest user 1`] = `
<div>
  <div
    class="bg-white rounded-lg w-full max-w-md"
  >
    <h3
      class="text-lg font-semibold mb-3"
    >
      Apply Filter
    </h3>
    <div
      class="mb-3"
    >
      <select
        class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-orange-300"
      >
        <option
          value="none"
        >
          No Filter
        </option>
        <option
          value="grayscale"
        >
          Grayscale
        </option>
        <option
          disabled=""
          value="sepia"
        >
          Sepia
           - Sign up to unlock
        </option>
        <option
          disabled=""
          value="vintage"
        >
          Vintage
           - Sign up to unlock
        </option>
      </select>
    </div>
    <div
      class="mt-4 flex gap-4"
    >
      <button
        class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
          />
        </svg>
      </button>
      <button
        class="bg-orange-400 text-white px-4 py-2 rounded hover:bg-orange-500"
      >
        Reset
      </button>
    </div>
  </div>
</div>
`;

exports[`PhotoBoothControls Component > Snapshots > should match snapshot when applying filter 1`] = `
<div>
  <div
    class="bg-white rounded-lg w-full max-w-md"
  >
    <h3
      class="text-lg font-semibold mb-3"
    >
      Apply Filter
    </h3>
    <div
      class="mb-3"
    >
      <select
        class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-orange-300"
        disabled=""
      >
        <option
          value="none"
        >
          No Filter
        </option>
        <option
          value="grayscale"
        >
          Grayscale
           - 
          Convert to black and white
        </option>
        <option
          value="sepia"
        >
          Sepia
           - 
          Vintage sepia tone
        </option>
        <option
          value="vintage"
        >
          Vintage
           - 
          Old photo effect
        </option>
      </select>
    </div>
    <div
      class="mb-3"
    >
      <label
        class="block text-sm font-medium mb-1"
      >
        Intensity: 
        1.0
      </label>
      <input
        class="w-full"
        disabled=""
        max="1"
        min="0"
        step="0.1"
        type="range"
        value="1"
      />
      <div
        class="flex justify-between text-xs text-gray-600 mt-1"
      >
        <span>
          0
        </span>
        <span>
          1
        </span>
      </div>
    </div>
    <button
      class="w-full bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700 disabled:bg-gray-400 mb-2"
      disabled=""
    >
      Applying...
    </button>
    <div
      class="mt-4 flex gap-4"
    >
      <button
        class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
          />
        </svg>
      </button>
      <button
        class="bg-orange-400 text-white px-4 py-2 rounded hover:bg-orange-500"
      >
        Reset
      </button>
    </div>
  </div>
</div>
`;

exports[`PhotoBoothControls Component > Snapshots > should match snapshot with filter selected 1`] = `
<div>
  <div
    class="bg-white rounded-lg w-full max-w-md"
  >
    <h3
      class="text-lg font-semibold mb-3"
    >
      Apply Filter
    </h3>
    <div
      class="mb-3"
    >
      <select
        class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-orange-300"
      >
        <option
          value="none"
        >
          No Filter
        </option>
        <option
          value="grayscale"
        >
          Grayscale
           - 
          Convert to black and white
        </option>
        <option
          value="sepia"
        >
          Sepia
           - 
          Vintage sepia tone
        </option>
        <option
          value="vintage"
        >
          Vintage
           - 
          Old photo effect
        </option>
      </select>
    </div>
    <div
      class="mb-3"
    >
      <label
        class="block text-sm font-medium mb-1"
      >
        Intensity: 
        0.5
      </label>
      <input
        class="w-full"
        max="1"
        min="0"
        step="0.1"
        type="range"
        value="0.5"
      />
      <div
        class="flex justify-between text-xs text-gray-600 mt-1"
      >
        <span>
          0
        </span>
        <span>
          1
        </span>
      </div>
    </div>
    <button
      class="w-full bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700 disabled:bg-gray-400 mb-2"
    >
      Apply Filter
    </button>
    <div
      class="mt-4 flex gap-4"
    >
      <button
        class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
          />
        </svg>
      </button>
      <button
        class="bg-orange-400 text-white px-4 py-2 rounded hover:bg-orange-500"
      >
        Reset
      </button>
    </div>
  </div>
</div>
`;

exports[`PhotoBoothControls Component > Snapshots > should match snapshot with no filter selected 1`] = `
<div>
  <div
    class="bg-white rounded-lg w-full max-w-md"
  >
    <h3
      class="text-lg font-semibold mb-3"
    >
      Apply Filter
    </h3>
    <div
      class="mb-3"
    >
      <select
        class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-orange-300"
      >
        <option
          value="none"
        >
          No Filter
        </option>
        <option
          value="grayscale"
        >
          Grayscale
           - 
          Convert to black and white
        </option>
        <option
          value="sepia"
        >
          Sepia
           - 
          Vintage sepia tone
        </option>
        <option
          value="vintage"
        >
          Vintage
           - 
          Old photo effect
        </option>
      </select>
    </div>
    <div
      class="mt-4 flex gap-4"
    >
      <button
        class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
          />
        </svg>
      </button>
      <button
        class="bg-orange-400 text-white px-4 py-2 rounded hover:bg-orange-500"
      >
        Reset
      </button>
    </div>
  </div>
</div>
`;
